<resources>
    <string name="app_name">Agghia</string>
    <string name="monthly_wage_label">Monthly Net Wage</string>
    <string name="daily_hours_label">Daily Working Hours</string>
    <string name="weekly_days_label">Weekly Working Days</string>
    <string name="save_button">Save</string>
    <string name="start_time_label">Start Time</string>
    <string name="loading">Loading…</string>
    <string name="not_working_day">today is not a working day</string>
    <string name="earned_so_far_today">earned so far today</string>
    <string name="earned_so_far_week">earned so far this week</string>
    <string name="earned_total_week">total earned this week</string>
    <string name="weekend_message">You are off Today!</string>
    <string name="money_label_weekend">earned this week</string>
</resources>
